fix issue #18: css responsibe problem on safari

--- a/style-faq.css
+++ b/style-faq.css
@@ -334,7 +334,7 @@ h5 > span{
 	text-decoration: underline;
 }
 
-@media only screen and (max-width : 899px), and (max-device-width : 900px) {
+@media only screen and (max-width : 899px) {
 
 #light-gray div{
 	padding-left: 5%;
